# TLShoujo

./: .gdb_history  .gitignore  CREDITS.md  README.md  meson.build  meson_options.txt
doc/: level_seperation.rst  memory.rst  probe.rst  simd.rst
include/: tlshoujo.h
include/internal/: core.h  impl.h
include/tlshoujo/: codec.h  core.h  logic.h  memory.h  probe.h
src/: core.c  meson.build
src/arch/: meson.build
src/arch/amd64/: core_lock.c  cpuid.S  meson.build  probe.c  spinlock.S
src/arch/x86_64/: core_lock.c  cpuid.S  meson.build  probe.c
src/cli/: cpu.c  cpu.h  help.c  help.h  main.c  meson.build
src/codec/: base64.c  meson.build
src/memory/: alloc.c  compare.c  meson.build  tweak.c  wipe.c
test/: meson.build  test_core.c
