option('cli', type : 'feature', value : 'enabled', description : 'Build CLI tool')

# Architecture specific. Ignored if not applicable for target
option('sse2', type : 'feature', value: 'enabled', description : 'Include SSE2 code at runtime')
option('sse3', type : 'feature', value: 'enabled', description : 'Include SSE3 code at runtime')
option('ssse3', type : 'feature', value: 'enabled', description : 'Include SSSE3 code at runtime')
option('sse41', type : 'feature', value: 'enabled', description : 'Include SSE4.1 code at runtime')
option('clmul', type : 'feature', value: 'enabled', description : 'Include CLMUL code at runtime')
option('avx', type : 'feature', value : 'enabled', description : 'Include AVX code at runtime')
option('avx2', type : 'feature', value : 'enabled', description : 'Include AVX-2 code at runtime')
option('avx512f', type : 'feature', value : 'enabled', description : 'Include AVX-512 Foundation code at runtime')
option('aesni', type : 'feature', value : 'enabled', description : 'Include AES-NI code at runtime')
option('shani', type : 'feature', value : 'enabled', description : 'Include SHA-NI code at runtime')
